--- a/PaginaDelProyecto/usuario.html
+++ b/PaginaDelProyecto/usuario.html
@@ -1,11 +1,316 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Panel Usuario</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <style>
+    body { background-color: #f9fafc; }
+    .navbar { background-color: #0d6efd !important; }
+    .navbar-brand, .nav-link { color: #fff !important; }
+    .table thead { background-color: #e8f0fe; }
+  </style>
 </head>
 <body>
-    <h3>Pendejo el que lo lea</h3>
+
+<nav class="navbar navbar-expand-lg shadow-sm">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold" href="#">Panel Usuario</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="#">Cursos</a></li>
+        <li class="nav-item"><a class="nav-link text-warning" href="login.html">Salir</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container mt-5">
+  <h2 class="mb-4 text-primary">Cursos Disponibles</h2>
+
+  <!-- Usuario activo -->
+  <div id="usuarioActivo" class="alert alert-info d-none"></div>
+
+  <!-- Mensaje de restricción -->
+  <div id="restriccionMsg" class="alert alert-warning d-none"></div>
+
+  <!-- 🔍 Buscador por ID -->
+  <div class="input-group mb-3 shadow-sm">
+    <input type="number" id="buscarCursoInput" class="form-control" placeholder="Buscar curso por ID...">
+    <button class="btn btn-primary" onclick="buscarCursoPorID()">Buscar</button>
+    <button class="btn btn-outline-secondary" onclick="cargarCursos()">Restaurar lista</button>
+  </div>
+
+  <div id="contenedorCursos" class="table-responsive shadow-sm rounded d-none">
+    <table class="table table-bordered align-middle text-center bg-white">
+      <thead class="fw-bold">
+        <tr>
+          <th>ID</th>
+          <th>Maestro</th>
+          <th>Materia</th>
+          <th>Turno</th>
+          <th>Hora inicio</th>
+          <th>Hora fin</th>
+          <th>Espacios</th>
+          <th>Fecha fin</th>
+          <th>Hora fin (reserva)</th>
+          <th>Estado</th>
+          <th>Acción</th>
+        </tr>
+      </thead>
+      <tbody id="tablaCursos">
+        <tr><td colspan="11" class="text-muted">Cargando cursos...</td></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div id="alertContainer" class="mt-3"></div>
+</div>
+
+<!-- Modal para ingresar correo -->
+<div class="modal fade" id="correoModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="correoForm">
+        <div class="modal-header">
+          <h5 class="modal-title">Confirmar inscripción</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <p>Por favor ingresa tu correo electrónico para continuar:</p>
+          <input type="email" class="form-control" id="correoInput" placeholder="correo@ejemplo.com" required>
+          <input type="hidden" id="cursoIdHidden">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="submit" class="btn btn-primary">Inscribirme</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  // ==== ENDPOINTS ====
+  const API_GET_CURSOS       = "https://localhost:7261/api/Reservas/GetAll";
+  const API_GET_CURSO_BY_ID  = "https://localhost:7261/api/Reservas/GetByID?ID=";
+  const API_POST_INSCRIPCION = "https://localhost:7261/api/Inscripcoines";
+  const API_GET_USUARIOS     = "https://localhost:7261/api/Usuarios/GetAll";
+
+  // ==== Usuario actual dinámico ====
+  let currentUser = null;
+
+  // ==== Bloqueo ====
+  const BLOQUEO_KEY = "ultimaInscripcion";
+  const MS_24H = 2 * 60 * 1000; // aquí puedes poner 24*60*60*1000
+
+  function showAlert(message, type = "success") {
+    const host = document.getElementById("alertContainer");
+    const el = document.createElement("div");
+    el.innerHTML = `
+      <div class="alert alert-${type} alert-dismissible fade show" role="alert">
+        ${message}
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      </div>`;
+    host.appendChild(el);
+    setTimeout(()=> el.remove(), 4000);
+  }
+
+  function actualizarBloqueoUI() {
+    const restr = document.getElementById("restriccionMsg");
+    const tabla = document.getElementById("contenedorCursos");
+    const ts = localStorage.getItem(BLOQUEO_KEY);
+
+    if (!ts) {
+      restr.classList.add("d-none");
+      tabla.classList.remove("d-none");
+      return;
+    }
+    const diff = Date.now() - parseInt(ts, 10);
+    if (diff >= MS_24H) {
+      restr.classList.add("d-none");
+      tabla.classList.remove("d-none");
+      return;
+    }
+    const minutos = Math.ceil((MS_24H - diff) / (1000*60));
+    restr.textContent = `Ya te inscribiste. Debes esperar ${minutos} minuto(s) para volver a inscribirte.`;
+    restr.classList.remove("d-none");
+    tabla.classList.add("d-none");
+  }
+
+  function estadoBadge(valor) {
+    const activo = (valor === true) || (valor === "true") || (valor === 1) || (valor === "Activo");
+    return activo
+      ? '<span class="badge text-bg-success">Activo</span>'
+      : '<span class="badge text-bg-secondary">Inactivo</span>';
+  }
+
+  function renderTablaCursos(data) {
+    const tb = document.getElementById("tablaCursos");
+    tb.innerHTML = "";
+    if (!Array.isArray(data)) data = [data];
+
+    if (!data || data.length === 0) {
+      tb.innerHTML = '<tr><td colspan="11" class="text-muted">No se encontraron cursos</td></tr>';
+      return;
+    }
+
+    data.forEach(c => {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${c.idCurso}</td>
+        <td>${c.nombreMaestro || "N/A"}</td>
+        <td>${c.nombreMateria || "N/A"}</td>
+        <td>${c.turno || "N/A"}</td>
+        <td>${(c.horasInicioCurso || "").toString().substring(0,8)}</td>
+        <td>${(c.horaFinalCurso || "").toString().substring(0,8)}</td>
+        <td>${(c.espaciosDisponibles ?? "N/A")}</td>
+        <td>${(c.fechaFin || "").toString().substring(0,10)}</td>
+        <td>${(c.horaFin || "").toString().substring(0,8)}</td>
+        <td>${estadoBadge(c.estado)}</td>
+        <td>
+          <button class="btn btn-success btn-sm" onclick="abrirModalCorreo(${c.idCurso})">Inscribirse</button>
+        </td>
+      `;
+      tb.appendChild(tr);
+    });
+  }
+
+  async function cargarCursos() {
+    try {
+      const r = await fetch(API_GET_CURSOS);
+      if (!r.ok) throw new Error("HTTP " + r.status);
+      const data = await r.json();
+      renderTablaCursos(data);
+    } catch (err) {
+      console.error("Error cursos:", err);
+      document.getElementById("tablaCursos").innerHTML =
+        '<tr><td colspan="11" class="text-danger">Error al cargar los cursos</td></tr>';
+    }
+  }
+  
+//=============================================
+  async function buscarCursoPorID() {
+    const id = document.getElementById("buscarCursoInput").value.trim();
+    if (!id) {
+      showAlert("Por favor ingresa un ID de curso", "warning");
+      return;
+    }
+    try {
+      const res = await fetch(API_GET_CURSO_BY_ID + id);
+      if (!res.ok) throw new Error("Curso no encontrado");
+      const curso = await res.json();
+      renderTablaCursos(curso);
+    } catch (err) {
+      console.error(err);
+      document.getElementById("tablaCursos").innerHTML =
+        '<tr><td colspan="11" class="text-danger">Curso no encontrado</td></tr>';
+    }
+  }
+
+  // ==== Cargar usuario desde sessionStorage ====
+  async function cargarUsuario() {
+    try {
+      const usuarioGuardado = sessionStorage.getItem("usuarioActivo");
+      if (usuarioGuardado) {
+        currentUser = JSON.parse(usuarioGuardado);
+        const info = document.getElementById("usuarioActivo");
+        info.textContent = `Usuario activo: ${currentUser.nameUser} (${currentUser.emailUser})`;
+        info.classList.remove("d-none");
+      } else {
+        console.warn("No hay usuario activo en sessionStorage");
+      }
+    } catch (err) {
+      console.error("Error cargando usuario:", err);
+      showAlert("No se pudo cargar el usuario", "danger");
+    }
+  }
+
+  // Abrir modal para pedir correo
+  function abrirModalCorreo(idCurso) {
+    document.getElementById("cursoIdHidden").value = idCurso;
+    const usuarioGuardado = sessionStorage.getItem("usuarioActivo");
+    const email = usuarioGuardado ? JSON.parse(usuarioGuardado).emailUser : "";
+    document.getElementById("correoInput").value = email;
+
+    const modal = new bootstrap.Modal(document.getElementById("correoModal"));
+    modal.show();
+  }
+
+  // Manejar envío de formulario del modal
+document.getElementById("correoForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const correo = document.getElementById("correoInput").value.trim();
+  const idCurso = document.getElementById("cursoIdHidden").value;
+
+  if (!correo || !/\S+@\S+\.\S+/.test(correo)) {
+    showAlert("Debes ingresar un correo válido.", "danger");
+    return;
+  }
+
+  const usuarioGuardado = sessionStorage.getItem("usuarioActivo");
+  const usuario = usuarioGuardado ? JSON.parse(usuarioGuardado) : null;
+  if (!usuario) {
+    showAlert("Usuario no registrado", "danger");
+    return;
+  }
+
+  const payload = {
+    idCurso: parseInt(idCurso),
+    idUser: usuario.idUser,
+    emailUser: correo
+  };
+
+  try {
+    const res = await fetch(API_POST_INSCRIPCION, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    // ✅ Verificamos si la API respondió correctamente
+    if (res.ok) {
+      // Algunos backends devuelven 200 con JSON, otros 204 sin contenido
+      let data = null;
+      try {
+        data = await res.json();
+      } catch (_) {
+        data = null;
+      }
+
+      showAlert("Inscripción realizada con éxito ✅", "success");
+
+      // Guardar bloqueo en localStorage
+      localStorage.setItem(BLOQUEO_KEY, String(Date.now()));
+      actualizarBloqueoUI();
+
+      // Cerrar modal después de éxito
+      bootstrap.Modal.getInstance(document.getElementById("correoModal")).hide();
+    } else {
+      // ⚠️ Aquí manejamos errores reales que devuelve tu API
+      let errorMsg = "Error al inscribirse";
+      try {
+        const errorData = await res.json();
+        errorMsg = errorData.message || JSON.stringify(errorData);
+      } catch (_) {
+        errorMsg = await res.text();
+      }
+      showAlert(errorMsg, "danger");
+    }
+  } catch (err) {
+    console.error("Inscripción error:", err);
+    showAlert("Error de conexión con el servidor", "danger");
+  }
+});
+
+  // ==== Inicial ====
+  actualizarBloqueoUI();
+  cargarUsuario();
+  cargarCursos();
+
+</script>
+
 </body>
 </html>
