--- a/PaginaDelProyecto/usuario.html
+++ b/PaginaDelProyecto/usuario.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="#">Cursos</a></li>
-        <li class="nav-item"><a class="nav-link text-warning" href="login.html">Salir</a></li>
+        <li class="nav-item"><a class="nav-link text-warning" href="index.html">Salir</a></li>
       </ul>
     </div>
   </div>
@@ -104,7 +104,7 @@
 
   // ==== Bloqueo ====
   const BLOQUEO_KEY = "ultimaInscripcion";
-  const MS_24H = 2 * 60 * 1000; // aquí puedes poner 24*60*60*1000
+  const MS_24H = 1 * 5 * 1000; // aquí puedes poner 24*60*60*1000
 
   function showAlert(message, type = "success") {
     const host = document.getElementById("alertContainer");
